--- a/ClubSoft/Views/Shared/_Layout.cshtml
+++ b/ClubSoft/Views/Shared/_Layout.cshtml
@@ -15,43 +15,55 @@
     
 </head>
 <body>
-    @if (SignInManager.IsSignedIn(User)){
-    <div class="d-flex" id="wrapper">
-        <!-- Sidebar-->
-        <div class="bg-white" id="sidebar-wrapper" style="background: linear-gradient(90deg, rgba(8,9,10,1) 0%, rgba(17,19,21,1) 50%, rgba(33,37,41,1) 100%) !important;">
-            <div class="sidebar-heading text-white">ClubSoft</div>
-            <div class="list-group list-group-flush">
-                <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Socios" asp-action="Index">Socios</a>
-                <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-            </div>
-        </div>
-        <!-- Page content wrapper-->
-        <div id="page-content-wrapper">
-            <!-- Top navigation-->
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom">
-                <div class="container-fluid">
-                    <button class="btn" id="sidebarToggle"><i class="fa-solid fa-angles-left" style="color: white;"></i></button>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation"><span
-                            class="navbar-toggler-icon"></span></button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
-                            <partial name="_LoginPartial" />                           
-                        </ul>
-                    </div>
+    @if (SignInManager.IsSignedIn(User))
+    {
+        <div class="d-flex" id="wrapper">
+            <!-- Sidebar-->
+            <div class="bg-white" id="sidebar-wrapper"
+                style="background: linear-gradient(357deg, rgba(0,128,255,1) 0%, rgba(16,39,62,1) 40%, rgba(33,37,41,1) 100%) !important;">
+                <div class="sidebar-heading text-white">ClubSoft</div>
+                <div class="list-group list-group-flush">
+                    <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Home"
+                        asp-action="Index">Home</a>
+                    <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Socios"
+                        asp-action="Index">Socios</a>
+                    <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Home"
+                        asp-action="Privacy">Privacy</a>
                 </div>
-            </nav>
-        </div>
-    </div>
-     }
-    <!-- Page content-->
-            <div class="container-fluid">
-                <main role="main" class="mt-3 pb-3">
-                    @RenderBody()
-                </main>
             </div>
+            <!-- Page content wrapper-->
+            <div id="page-content-wrapper">
+                <!-- Top navigation-->
+                <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom">
+                    <div class="container-fluid">
+                        <button class="btn" id="sidebarToggle"><i class="fa-solid fa-angles-left"
+                                style="color: white;"></i></button>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation"><span
+                                class="navbar-toggler-icon"></span></button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
+                                <partial name="_LoginPartial" />
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+                <!-- Page content-->
+                <div class="container-fluid">
+                    <main role="main" class="mt-3 pb-3">
+                        @RenderBody()
+                    </main>
+                </div>
+            </div>
+        </div>
+    }
+    <div class="container-fluid">
+        <main role="main" class="mt-3 pb-3">
+            @RenderBody()
+        </main>
+    </div>
+    
     
         @*
          <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
