--- a/ClubSoft/Views/Shared/_LoginPartial.cshtml
+++ b/ClubSoft/Views/Shared/_LoginPartial.cshtml
@@ -9,11 +9,11 @@
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-white" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false"><i class="fa-solid fa-circle-user"></i> Cuenta</a>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage"><i class="fa-solid fa-address-card text-light"></i> Mi Cuenta</a>
+            <div class="dropdown-menu dropdown-menu-end bg-dark" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage"><i class="fa-solid fa-address-card"></i> Mi Cuenta</a>
                 <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout"
                     asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                    <button type="submit" class="dropdown-item"><i class="fa-solid fa-right-from-bracket text-light"></i> Cerrar Sesión</button>
+                    <button type="submit" class="dropdown-item text-white"><i class="fa-solid fa-right-from-bracket text-white"></i> Cerrar Sesión</button>
                 </form>
             </div>
         </li>
