--- a/ClubSoft/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ClubSoft/Areas/Identity/Pages/Account/Register.cshtml
@@ -7,11 +7,16 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<div class="fo1">
-    <div class="">
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h1 class="text-center">REGISTRARSE</h1>
+
+<div class=" row" style="height: 100px;">
+    <div class=" col-md-4 imgcolumna">
+    
+    </div> 
+    <div class=" col-md-8 posiciondiv">
+        <form class="fo1" id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+            <h1 class="text-center">¡BIENVENIDO!</h1>
             <hr />
+            <p class="text-center">Esta cuenta es personal y te permitirá obtener control de tu equipo.</p>
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
@@ -31,36 +36,7 @@
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">ENVIAR</button>
         </form>
     </div>
-    @* <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to register.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins!)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
-    </div> *@
+   
 </div>
 
 @section Scripts {
