--- a/ClubSoft/wwwroot/css/Register.css
+++ b/ClubSoft/wwwroot/css/Register.css
@@ -1,21 +1,41 @@
 .fo1{
   
     padding: 15px 15px 15px;
-    background-color: rgba(136, 126, 126, 0.983);
+    background-color: rgba(136, 126, 126, 0.458);
     border-radius: 10px;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    width: 70vh;
-    height: 85vh;
-    padding-top: 40px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+       width: 70vh; 
+    height: 85vh;  
+     /* padding-top: 40px; */
+     /* position: absolute;  */
+    /* top: 50%;
+    left: 50%;   */
+    /* transform: translate(-50%, -50%); */
     border-radius: 10px;
+  align-items: center;
+  justify-content: center,
+ 
     
+    
+  }
   
-  }
-  body{
-    background: rgb(19,24,24);
-    background: linear-gradient(0deg, rgba(19,24,24,1) 10%, rgba(228,223,211,1) 100%);
-  }
+  /* html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+} */
+
+.posiciondiv{
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 40px;
+}
+.imgcolumna{
+   background-image: url(../img/fondoregister.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center; 
+ 
+}
