imagen fondo completa

--- a/ClubSoft/Views/Home/Index.cshtml
+++ b/ClubSoft/Views/Home/Index.cshtml
@@ -7,4 +7,7 @@
     <button>
         <a class="btn" asp-area="Identity" asp-page="/Account/Register">Registrarse</a>
     </button>
+    <button>
+        <a class="btn" asp-area="Identity" asp-page="/Account/Login">Ingresar con tu usuario</a>
+    </button>
 </div>
