--- a/ClubSoft/Views/Shared/_Layout.cshtml
+++ b/ClubSoft/Views/Shared/_Layout.cshtml
@@ -50,16 +50,16 @@
                     </div>
                 </nav>
                 <!-- Page content-->
-                <div class="container-fluid">
-                    <main role="main" class="mt-3 pb-3">
+                <div>
+                    <main role="main">
                         @RenderBody()
                     </main>
                 </div>
             </div>
         </div>
     }
-    <div class="container-fluid">
-        <main role="main" class="mt-3 pb-3">
+    <div>
+        <main role="main">
             @RenderBody()
         </main>
     </div>
