--- a/ClubSoft/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ClubSoft/Areas/Identity/Pages/Account/Register.cshtml
@@ -8,11 +8,11 @@
 <h1>@ViewData["Title"]</h1>
 
 
-<div class=" row" style="height: 100px;">
-    <div class=" col-md-4 imgcolumna">
+<div class= "row">
+    <div class= "col-md-4 ">
     
     </div> 
-    <div class=" col-md-8 posiciondiv">
+    <div class= "col-md-8 posiciondiv">
         <form class="fo1" id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h1 class="text-center">¡BIENVENIDO!</h1>
             <hr />
@@ -28,12 +28,13 @@
                 <label asp-for="Input.Password">Ingresa Tu Contraseña</label>
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
-            <div class="form-floating mb-3">
+            <div class="form-floating mb-3 text-center">
                 <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
                 <label asp-for="Input.ConfirmPassword">Confirma Tu Contraseña</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">ENVIAR</button>
+           
+            <button id="registerSubmit" type="submit" class="w-50 btn btn-lg btn-primary pt-2">ENVIAR</button>
+             </div>
         </form>
     </div>
    
