--- a/ClubSoft/Views/Shared/_Layout.cshtml
+++ b/ClubSoft/Views/Shared/_Layout.cshtml
@@ -15,8 +15,8 @@
     
 </head>
 <body>
-    @if (SignInManager.IsSignedIn(User))
-    {
+    @* @if (SignInManager.IsSignedIn(User))
+    { *@
         <div class="d-flex" id="wrapper">
             <!-- Sidebar-->
             <div class="bg-white" id="sidebar-wrapper"
