--- a/ClubSoft/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/ClubSoft/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -1,14 +1,18 @@
 ﻿@page
 @model ForgotPasswordModel
+<link rel="stylesheet" href="~/css/Login.css" asp-append-version="true" />
 @{
-    ViewData["Title"] = "Forgot your password?";
+    ViewData["Title"] = "";
 }
 
 <h1>@ViewData["Title"]</h1>
-<h2>Enter your email.</h2>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+
+
+<div class="row ">
+    
+    <div class="col-md-4 text-center formulariorecupero">
+        <h2>RECUPERAR CONTRASEÑA.</h2>
+    <hr />
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
@@ -16,7 +20,7 @@
                 <label asp-for="Input.Email" class="form-label"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset Password</button>
+            <button type="submit" class="w-40 btn btn-lg btn-success">ENVIAR</button>
         </form>
     </div>
 </div>
