--- a/ClubSoft/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ClubSoft/Areas/Identity/Pages/Account/Login.cshtml
@@ -23,14 +23,14 @@
                     <label asp-for="Input.Password" class="form-label"> Ingresa Tu Contraseña</label>
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
-                <div class="checkbox mb-3">
+                <div class="checkbox mb-3 text-center">
                     <label asp-for="Input.RememberMe" class="form-label">
                         <input class="form-check-input" asp-for="Input.RememberMe" />
                         @Html.DisplayNameFor(m => m.Input.RememberMe)
                     </label>
                 </div>
-                <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Iniciar sesión</button>
+                <div class="text-center">
+                    <button id="login-submit" type="submit" class="w-40 btn btn-lg btn-success">INGRESAR</button>
                 </div>
                 <div>
                     <br>
@@ -41,7 +41,7 @@
                         <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl" class="text-dark">¿No tenés una Cuenta? Registrate</a>
                     </p>
                  <p class="text-center">
-                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation" class="text-dark">Volver a enviar la confirmación por correo electrónico</a>
+                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation" class="text-dark">Enviar la confirmación por correo electrónico</a>
                     </p> 
                 </div> 
             </form>
