--- a/ClubSoft/Views/Shared/_Layout.cshtml
+++ b/ClubSoft/Views/Shared/_Layout.cshtml
@@ -21,7 +21,9 @@
             <!-- Sidebar-->
             <div class="bg-white" id="sidebar-wrapper"
                 style="background: linear-gradient(357deg, rgba(0,128,255,1) 0%, rgba(16,39,62,1) 40%, rgba(33,37,41,1) 100%) !important;">
-                <div class="sidebar-heading text-white">ClubSoft</div>
+                <div class="sidebar-heading">
+                    <img src="~/img/logonav.png" style="width: 150px;" alt="logo"></a>
+                </div>
                 <div class="list-group list-group-flush">
                     <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Home"
                         asp-action="Index">Home</a>
