--- a/ClubSoft/Views/Home/Index.cshtml
+++ b/ClubSoft/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
-<div class="">
+<link rel="stylesheet" href="~/css/home.css" asp-append-version="true" />
+@* <div class="">
     <h1 class="display-4">Welcome</h1>
     <button>
         <a class="btn" asp-area="Identity" asp-page="/Account/Register">Registrarse</a>
@@ -10,4 +10,132 @@
     <button>
         <a class="btn" asp-area="Identity" asp-page="/Account/Login">Ingresar con tu usuario</a>
     </button>
-</div>
+</div> *@
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" style="background-color: #63d1f2;">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+        <img src="~/img/LogoClubSoft-sinfondo.png" alt="logo" style="width: 100px;">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button> 
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+            <a class="nav-link text-light fs-5" aria-current="page" href="#QUIENESSOMOS">¿QUIENES SOMOS?</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link text-light fs-5" href="#FUNCIONES">FUNCIONES</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link text-light fs-5" href="#CONTACTO">CONTACTO</a>
+            </li>
+        </ul>
+        </div>
+    </div>
+    </nav>
+
+    <section id="QUIENESSOMOS">
+        <div class="fondohome imghome">
+            <div class="row" style="height: 80vh;">
+                <div class="col-sm-12 col-md-6 text-center p-4 centrar" >
+                    <h1 class="tituloquienessomos">SISTEMA DE GESTION DE CLUBES</h1>
+                    <p class="fs-5">Somos una empresa dedicada exclusivamente al desarrollo de sistemas de gestion de clubes deportivos</p>
+                    <div class="d-grid gap-2 d-md-block col-6 mx-auto">
+                        <a class="btn btn-primary btn-lg m-2" asp-area="Identity" asp-page="/Account/Login">Iniciar Sesión</a>
+                        <a class="btn btn-primary btn-lg m-2" asp-area="Identity" asp-page="/Account/Register">Registrarse</a>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="FUNCIONES">
+    <div class="p-5">
+        <h1 class="text-center p-2 titulossecciones">FUNCIONES</h1>
+        <div class="row text-center">
+            <div class="col-md-3 col-sm-6 mb-4">
+                <div class="card estilocard text-black">
+                    <div class="card-body">
+                        <i class="fa-solid fa-users iconofunciones"></i>
+                        <h5 class="card-title">NUEVOS SOCIOS</h5>
+                        <p class="card-text parrafo">Los socios van a poder registrarse de manera facil y gratuita</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 mb-4 ">
+                <div class="card estilocard text-black">
+                    <div class="card-body">
+                        <i class="fa-solid fa-credit-card iconofunciones"></i>
+                        <h5 class="card-title">MEMBRESIA</h5>
+                        <p class="card-text parrafo">Pago de cuotas, historial de pagos y visualizacion de su membresia.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 mb-4 ">
+                <div class="card estilocard text-black">
+                    <div class="card-body">
+                        <i class="fa-solid fa-calendar-days iconofunciones"></i>
+                        <h5 class="card-title">EVENTOS</h5>
+                        <p class="card-text parrafo">Reservas de canchas, inscripcion en actividades y calendario de eventos.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 mb-4 ">
+                <div class="card estilocard text-black">
+                    <div class="card-body">
+                        <i class="fa-solid fa-cart-shopping iconofunciones"></i>
+                        <h5 class="card-title">TIENDA ONLINE</h5>
+                        <p class="card-text parrafo">Compra de productos, entradas y buffet.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </section>
+    
+  <section id="CONTACTO">
+      <div class="ps-5 pe-5 pb-5 text-center">  
+          <div class="row">
+            <div class="col-md-6 col-sm-12 marginform pe-5 ps-5">
+            <h1 class="titulossecciones">¡CONTACTANOS!</h1>
+              <form action="">           
+                <div class="form-group padform pt-2">
+                  <input type="text" id="Nombre" class="form-control bg-opacity-25 bg-light" placeholder="Nombre">
+                </div>
+                <div class="form-group padform">
+                  <input type="text" id="Email" class="form-control bg-opacity-25 bg-light" placeholder="Email">
+                </div>
+                <div class="form-group padform">
+                  <input type="text" id="Motivo" class="form-control bg-opacity-25 bg-light" placeholder="Motivo de contacto">
+                </div>
+                <div class="form-group padform">
+                <textarea name="" id="Mensaje" cols="20" rows="9" placeholder="Mensaje" class="form-control bg-opacity-25 bg-light"></textarea>
+                </div>
+                <input type="submit" class="btn btn-primary btn-lg" value="Enviar información" id="Enviar">
+              </form>
+            </div>
+            <div class="col-md-6 col-sm-12 fuentecards p-5">
+              <div>
+                <i class="iconocontacto fa-solid fa-location-dot p-3"></i>
+                <p><b>Morteros, Argentina</b></p>
+              </div>
+              <div>
+                <i class="iconocontacto fa-solid fa-envelope p-3"></i>
+                <p><b>contacto@clubsoft.com.ar</b></p>
+              </div>
+              <div>
+                <i class="iconocontacto fa-solid fa-phone p-3"></i>
+                <p><b>3562 41-5914</b></p>
+              </div>
+            </div>
+          </div>
+        </div>  
+    </section>
+
+
+  <footer class="footer">
+    <p class="text-center">© Copyright ClubSoft. Todos los derechos reservados</p>
+  </footer>
