--- a/ClubSoft/Views/Home/Index.cshtml
+++ b/ClubSoft/Views/Home/Index.cshtml
@@ -12,10 +12,10 @@
     </button>
 </div> *@
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" style="background-color: #63d1f2;">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" style="background-color: rgba(16,39,62,1);">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
-        <img src="~/img/LogoClubSoft-sinfondo.png" alt="logo" style="width: 100px;">
+        <img src="~/img/logonav.png" alt="logo" style="width: 150px;">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -40,11 +40,11 @@
         <div class="fondohome imghome">
             <div class="row" style="height: 80vh;">
                 <div class="col-sm-12 col-md-6 text-center p-4 centrar" >
-                    <h1 class="tituloquienessomos">SISTEMA DE GESTION DE CLUBES</h1>
-                    <p class="fs-5">Somos una empresa dedicada exclusivamente al desarrollo de sistemas de gestion de clubes deportivos</p>
+                    <h1 class="tituloquienessomos text-light">SISTEMA DE GESTION DE CLUBES</h1>
+                    <p class="fs-5 text-light">Somos una empresa dedicada exclusivamente al desarrollo de sistemas de gestion de clubes deportivos</p>
                     <div class="d-grid gap-2 d-md-block col-6 mx-auto">
-                        <a class="btn btn-primary btn-lg m-2" asp-area="Identity" asp-page="/Account/Login">Iniciar Sesión</a>
-                        <a class="btn btn-primary btn-lg m-2" asp-area="Identity" asp-page="/Account/Register">Registrarse</a>
+                        <a class="btn btn-dark btn-lg m-2" asp-area="Identity" asp-page="/Account/Login">Iniciar Sesión</a>
+                        <a class="btn btn-dark btn-lg m-2" asp-area="Identity" asp-page="/Account/Register">Registrarse</a>
                     </div>
                     
                 </div>
