--- a/ClubSoft/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ClubSoft/Areas/Identity/Pages/Account/Register.cshtml
@@ -9,11 +9,11 @@
 
 
 <div class= "row">
-    <div class= "col-md-4 ">
+    @* <div class= "col-md-4 ">
     
-    </div> 
-    <div class= "col-md-8 posiciondiv">
-        <form class="fo1" id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+    </div>  *@
+    <div class= " fo1">
+        <form class="" id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h1 class="text-center">¡BIENVENIDO!</h1>
             <hr />
             <p class="text-center">Esta cuenta es personal y te permitirá obtener control de tu equipo.</p>
@@ -33,8 +33,12 @@
                 <label asp-for="Input.ConfirmPassword">Confirma Tu Contraseña</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
            
-            <button id="registerSubmit" type="submit" class="w-50 btn btn-lg btn-primary pt-2">ENVIAR</button>
              </div>
+             <div class="text-center">
+                <button id="registerSubmit" type="submit" class="w-50  btn btn-lg btn-success pt-2">ENVIAR</button>
+
+             </div>
+              
         </form>
     </div>
    
