--- a/ClubSoft/wwwroot/css/Login.css
+++ b/ClubSoft/wwwroot/css/Login.css
@@ -2,7 +2,7 @@
 .fo1{
   
     padding: 15px 15px 15px;
-    background-color: rgba(171, 162, 162, 0.337);
+    background-color: rgba(215, 209, 209, 0.89);
     border-radius: 10px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     width: 70vh;
@@ -13,8 +13,12 @@
     left: 50%;
     transform: translate(-50%, -50%);
     
-    
-  
+  }
+  body{
+    background-image: url(../img/fondologin.jpg);
+    background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   }
   .formulariorecupero{
     
