creacion vista inicio

--- a/ClubSoft/Views/Shared/_Layout.cshtml
+++ b/ClubSoft/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                 <img src="~/img/logonav.png" style="width: 150px;" alt="logo" />
             </div>
             <div class="list-group list-group-flush">
-                <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Home" asp-action="Inicio">Inicio</a>
                 <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Socios" asp-action="Index">Socios</a>
                 <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
             </div>
