vista de provincias

--- a/ClubSoft/Views/Home/Index.cshtml
+++ b/ClubSoft/Views/Home/Index.cshtml
@@ -56,7 +56,7 @@
     <div class="p-5">
         <h1 class="text-center p-2 titulossecciones">FUNCIONES</h1>
         <div class="row text-center">
-            <div class="col-md-3 col-sm-6 mb-4">
+            <div class="col-md-3 col-sm-6 mb-2">
                 <div class="card estilocard text-black">
                     <div class="card-body">
                         <i class="fa-solid fa-users iconofunciones"></i>
@@ -65,7 +65,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 col-sm-6 mb-4 ">
+            <div class="col-md-3 col-sm-6 mb-2 ">
                 <div class="card estilocard text-black">
                     <div class="card-body">
                         <i class="fa-solid fa-credit-card iconofunciones"></i>
@@ -74,16 +74,16 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 col-sm-6 mb-4 ">
+            <div class="col-md-3 col-sm-6 mb-2 ">
                 <div class="card estilocard text-black">
                     <div class="card-body">
                         <i class="fa-solid fa-calendar-days iconofunciones"></i>
                         <h5 class="card-title">EVENTOS</h5>
-                        <p class="card-text parrafo">Reservas de canchas, inscripcion en actividades y calendario de eventos.</p>
+                        <p class="card-text parrafo">Reservas, inscripciones y próximos eventos.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 col-sm-6 mb-4 ">
+            <div class="col-md-3 col-sm-6 mb-2 ">
                 <div class="card estilocard text-black">
                     <div class="card-body">
                         <i class="fa-solid fa-cart-shopping iconofunciones"></i>
