--- a/ClubSoft/Views/Shared/_Layout.cshtml
+++ b/ClubSoft/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="list-group list-group-flush">
                 <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Home" asp-action="Inicio">Inicio</a>
-                <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Socios" asp-action="Index">Socios</a>
+                <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Provincias" asp-action="Index">Provincias</a>
                 <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
             </div>
         </div>
