--- a/ClubSoft/Views/Shared/_Layout.cshtml
+++ b/ClubSoft/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
             <div class="list-group list-group-flush">
                 <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Home" asp-action="Inicio">Inicio</a>
                 <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Provincias" asp-action="Index">Provincias</a>
+                <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Localidades" asp-action="Index">Localidades</a>
                 <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
             </div>
         </div>
