--- a/ClubSoft/Views/Provincias/Index.cshtml
+++ b/ClubSoft/Views/Provincias/Index.cshtml
@@ -3,14 +3,14 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Provincias</h1>
+  <h1 class="display-4">Provincias</h1>
 </div>
 <div style="height: 100%;">
   <div class="table-responsive" style="height: 450px; overflow-y: auto;">
     <table class="table table-hover">
       <thead>
         <tr>
-          <th>Nombre</th>
+          <th style="position: sticky; top: 0; background-color: white;">Nombre</th>
         </tr>
       </thead>
       <tbody id="tbody-Provincias">
