--- a/ClubSoft/Views/Personas/Index.cshtml
+++ b/ClubSoft/Views/Personas/Index.cshtml
@@ -8,7 +8,7 @@
 
 <div class="p-3">
   <div class="row">
-    <h4></i>Agregar Nueva Persona<i class="fa-solid fa-plus ps-2"></i></h4>
+    <h4></i>Agregar Nueva Persona<i class="ms-2 fa-solid fa-square-plus"></i></h4>
     @* <input type="hidden" id="LocalidadID" value="0" />
     <div class="col-md-3">
       <input type="text" class="form-control" id="LocalidadNombre" style="text-transform:uppercase"
