--- a/ClubSoft/Views/Provincias/Index.cshtml
+++ b/ClubSoft/Views/Provincias/Index.cshtml
@@ -8,7 +8,7 @@
 
 <div class="p-3">
   <div class="row">
-      <h4></i>Agregar Nueva Provincia<i class="ms-2 fa-solid fa-square-plus"></i></h4>
+      <h4>Agregar Nueva Provincia<i class="ms-2 fa-solid fa-square-plus"></i></h4>
       <input type="hidden" id="ProvinciaID" value="0" />
       <div class="col-md-3">
         <input type="text" class="form-control" id="ProvinciaNombre" style="text-transform:uppercase"
