--- a/ClubSoft/Views/Home/Inicio.cshtml
+++ b/ClubSoft/Views/Home/Inicio.cshtml
@@ -3,6 +3,8 @@
 }
 <link rel="stylesheet" href="~/css/Inicio.css" asp-append-version="true" />
 
+<h1 class="text-center mt-3">¡Bienvenido @User.Identity?.Name!</h1>
+
 
 <div class="container mt-5">
     <div class="row">
